[gd_scene load_steps=2 format=3 uid="uid://dfamq5n451pat"]

[ext_resource type="Script" path="res://scripts/sector_height_window.gd" id="1_m0n6g"]

[node name="SectorHeightWindow" type="Window"]
auto_translate_mode = 1
title = "Change sector height"
initial_position = 1
size = Vector2i(350, 120)
visible = false
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_m0n6g")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Enter a height value from 0 to 255"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 13

[node name="HeightSpinBox" type="SpinBox" parent="PanelContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4
max_value = 255.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="OKButton" type="Button" parent="PanelContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
text = "OK"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="close"]
[connection signal="pressed" from="PanelContainer/MarginContainer3/HBoxContainer/CancelButton" to="." method="close"]
[connection signal="pressed" from="PanelContainer/MarginContainer3/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
